--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <span class="dot">xo</span>
+    <canvas id="circle" width="50" height="50"></canvas>
+    <button id="button1">Click me</button>
+
+    <canvas id="rectangle" width="75" height="75"></canvas>
+    <button id="button2">Click me</button>
+
     <script src="script.js"></script>
 </body>
 </html>
