--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 </head>
 
 <body>
+  <h1>Portfolio Project</h1>
+  
+
     <canvas id="circle" width="50" height="50"></canvas>
     <button id="button1">Click me</button>
 
     <canvas id="rectangle" width="75" height="75"></canvas>
     <button id="button2">Click me</button>
 
+    <p>This is text.</p>
+    <button id="button3">Click me</button>
+    
     <script src="script.js"></script>
 </body>
 </html>
